--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ futures-core = "0.3"
 futures-util = "0.3"
 tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
 tokio-stream = "0.1"
+tokio-test = "0.4.2"
 
 async-stream = "0.2"
 serde = { version = "1.0", features = ["derive"] }
