--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,28 +6,38 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+async-stream = "0.2"
 env_logger = "0.9.0"
-log = "0.4.14"
-tonic = "0.5.2"
-prost = "0.8.0"
-prost-types = "0.8.0"
 futures-core = "0.3"
 futures-util = "0.3"
+log = "0.4.14"
+prost = "0.8.0"
+prost-types = "0.8.0"
+rmp-serde = "0.15.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
 tokio-stream = "0.1"
 tokio-test = "0.4.2"
-
-async-stream = "0.2"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+tonic = "0.5.2"
 
 [build-dependencies]
-tonic-build = "0.5.2"
 prost = "0.8.0"
 prost-build = "0.8.0"
-prost-types = "0.8.0"
 protoc-rust = "2.0"
+tonic-build = "0.5.2"
+prost-types = "0.8.0"
 
 [patch.crates-io]
 prost = { git = "https://github.com/cab/prost", branch = "default-core" }
 #prost = { path = '../prost' }
+
+# server binary
+[[bin]]
+name = "server"
+path = "src/server.rs"
+
+# client binary
+[[bin]]
+name = "client"
+path = "src/client.rs"
