Compiles with patched version of prost-build and tonic-build that supports include_file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>"]
 edition = "2018"
 
+[profile.dev]
+debug-logging=true
+
+#[features]
+#max_level_off = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 async-stream = "0.2"
@@ -28,9 +34,17 @@ protoc-rust = "2.0"
 tonic-build = "0.5.2"
 prost-types = "0.8.0"
 
+#[patch.crates-io]
+# prost = { git = "https://github.com/cab/prost", branch = "default-core" }
+#prost = { git = "https://github.com/tokio-rs/prost", rev = "b7e4846dbcb52aeb8defbfde4605b1b975a1504d"}
+## prost = { path = '../prost' }
+#prost-build = { path = '../prost/prost-build', default-features = false }
+
 [patch.crates-io]
-prost = { git = "https://github.com/cab/prost", branch = "default-core" }
-#prost = { path = '../prost' }
+prost = { git = "https://github.com/tokio-rs/prost" }
+#prost-build = { git = "https://github.com/tokio-rs/prost" }
+prost-build = { path = "../prost/prost-build" }
+tonic-build = { path = '../tonic/tonic-build' }
 
 # server binary
 [[bin]]
