--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "
 tokio-stream = "0.1"
 tokio-test = "0.4.2"
 tonic = "0.5.2"
+tonic-health = "0.4.1"
 
 [build-dependencies]
 prost = "0.8.0"
