working with latest nomad

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.9.0"
 futures-core = "0.3"
 futures-util = "0.3"
 log = "0.4.14"
+log4rs = "1.0.0"
 prost = "0.8.0"
 prost-types = "0.8.0"
 rmp-serde = "0.15.4"
@@ -22,6 +23,7 @@ tokio-stream = "0.1"
 tokio-test = "0.4.2"
 tonic = "0.5.2"
 tonic-health = "0.4.1"
+wasmtime = "0.30.0"
 
 [build-dependencies]
 prost = "0.8.0"
