--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tokio-stream = "0.1"
 tokio-test = "0.4.2"
 tonic = "0.5.2"
 tonic-health = "0.4.1"
-wasi-provider = "1.0.0"
+#wasi-provider = "1.0.0"
 wasmtime = "0.30.0"
 
 [build-dependencies]
@@ -33,13 +33,14 @@ prost-build = "0.8.0"
 protoc-rust = "2.0"
 tonic-build = "0.5.2"
 prost-types = "0.8.0"
+#wasi-provider = "1.0.0"
 
 #[patch.crates-io]
 # prost = { git = "https://github.com/cab/prost", branch = "default-core" }
 #prost = { git = "https://github.com/tokio-rs/prost", rev = "b7e4846dbcb52aeb8defbfde4605b1b975a1504d"}
 ## prost = { path = '../prost' }
 #prost-build = { path = '../prost/prost-build', default-features = false }
-wasi-provider = { path = '../krustlet/crates/wasi-provider' }
+#wasi-provider = { path = '../krustlet/crates/wasi-provider' }
 
 [patch.crates-io]
 prost = { git = "https://github.com/tokio-rs/prost" }
